# LightAutoML

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTIG.md  Dockerfile  EMERCOM_full.ipynb  EMERCOM_seq.ipynb  Jenkinsfile  LICENSE  LightAutoML-0.2.16.1-py3-none-any.whl  LightAutoML-0.2.16.2-py3-none-any.whl  New algo tutorial-Fix.ipynb  README.md  Sequential_star_scheme_example_IDAO_final.ipynb  Tutorial_#. AutoML pipeline preset.ipynb  Tutorial_1. AutoML pipeline preset (with model descr).ipynb  Tutorial_1. AutoML pipeline preset.ipynb  Tutorial_1. Create your own pipeline.ipynb  Tutorial_1.1.GroupBy.ipynb  Tutorial_2. AutoML pipeline preset.ipynb  Tutorial_2. WhiteBox and AutoWoE.ipynb  Tutorial_3. Multiclass task.ipynb  Tutorial_4. Distillation.ipynb  Tutorial_4. SQL data source for pipeline preset.ipynb  Tutorial_4. Uplift modeling.ipynb  Tutorial_5. HDFS reader for pipeline preset.ipynb  Tutorial_5. NLP Interpretation.ipynb  Tutorial_5. Uplift modeling.ipynb  Tutorial_6. Distillation.ipynb  Tutorial_7_model_monitoring.ipynb  Tutorial_7_sequential_star_scheme_with_custom_generator.ipynb  build.py  build.sh  build_docs.sh  build_package.sh  check_docs.py  cmaes-0.5.0-py3-none-any.whl  default_config.yml  demo.py  (+13 more)
.github/: CONTRIBUTING.md
.github/workflows/: CI.yml  docker.yml  pre-commit.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: Python-API.rst  PythonAPI.rst  Tutorials.rst  addons.rst  automl.rst  conf.py  dataset.rst  image.rst  index.rst  lightautoml.automl.rst  lightautoml.dataset.rst  lightautoml.ml_algo.rst  lightautoml.ml_algo.torch_based.rst  lightautoml.ml_algo.tuning.rst  lightautoml.pipelines.features.rst  lightautoml.pipelines.ml.rst  lightautoml.pipelines.rst  lightautoml.pipelines.selection.rst  lightautoml.reader.rst  lightautoml.tasks.losses.rst  lightautoml.tasks.rst  lightautoml.transformers.rst  lightautoml.utils.rst  lightautoml.validation.rst  ml_algo.rst  ml_algo.tuning.rst  mock_docs.py  pipelines.features.rst  pipelines.ml.rst  pipelines.rst  pipelines.selection.rst  reader.rst  report.rst  requirements.txt  tasks.losses.rst  tasks.rst  text.rst  transformers.rst  utils.rst  validation.rst
docs/_static/: style.css
docs/_templates/: classtemplate.rst  functiontemplate.rst
docs/notebooks/: my_report_profile.html  tutor_1.ipynb
docs/pages/: Installation.rst  Python-API.rst  Tutorials.rst
docs/pythonapi/: lightautoml.addons.rst  lightautoml.addons.utilization.rst  lightautoml.automl.base.rst  lightautoml.automl.blend.rst  lightautoml.automl.presets.base.rst  lightautoml.automl.presets.image_presets.rst  lightautoml.automl.presets.rst  lightautoml.automl.presets.tabular_presets.rst  lightautoml.automl.presets.text_presets.rst  lightautoml.automl.presets.whitebox_presets.rst  lightautoml.automl.rst  lightautoml.dataset.base.rst  lightautoml.dataset.np_pd_dataset.rst  lightautoml.dataset.roles.rst  lightautoml.dataset.rst  lightautoml.dataset.utils.rst  lightautoml.image.image.rst  lightautoml.image.rst  lightautoml.image.utils.rst  lightautoml.ml_algo.base.rst  lightautoml.ml_algo.boost_cb.rst  lightautoml.ml_algo.boost_lgbm.rst  lightautoml.ml_algo.dl_model.rst  lightautoml.ml_algo.linear_sklearn.rst  lightautoml.ml_algo.rst  lightautoml.ml_algo.torch_based.linear_model.rst  lightautoml.ml_algo.torch_based.rst  lightautoml.ml_algo.tuning.base.rst  lightautoml.ml_algo.tuning.optuna.rst  lightautoml.ml_algo.tuning.rst  lightautoml.ml_algo.utils.rst  lightautoml.ml_algo.whitebox.rst  lightautoml.pipelines.features.base.rst  lightautoml.pipelines.features.image_pipeline.rst  lightautoml.pipelines.features.lgb_pipeline.rst  lightautoml.pipelines.features.linear_pipeline.rst  lightautoml.pipelines.features.rst  lightautoml.pipelines.features.text_pipeline.rst  lightautoml.pipelines.features.wb_pipeline.rst  lightautoml.pipelines.ml.base.rst  (+42 more)
docs/tutorials/: Tutorial_1_basics.ipynb  Tutorial_2_WhiteBox_AutoWoE.ipynb  Tutorial_4_NLP_Interpretation.ipynb  Tutorial_5_uplift.ipynb  Tutorial_6_custom_pipeline.ipynb  tutor_1.ipynb  tutor_2.ipynb  tutor_3.ipynb
examples/: EMERCOM_full.ipynb  EMERCOM_seq.ipynb  Sequential_next_value_prediction.ipynb  Sequential_star_scheme_example_IDAO_final.ipynb  Tutorial_1. AutoML pipeline preset (with model descr).ipynb  Tutorial_1_basics.ipynb  Tutorial_2. WhiteBox and AutoWoE.ipynb  Tutorial_5. Uplift modeling.ipynb  custom_search_space.py  demo.py  demo0.py  demo1.py  demo10.py  demo11.py  demo12.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo8_1.py  demo9.py  simple_tabular_classification.py
examples/optimization/: conditional_parameters.py  custom_search_space.py  sequential_parameter_search.py
examples/tutorials/: Tutorial_1_Basics.ipynb  Tutorial_1_basics.ipynb  Tutorial_2_WhiteBox_AutoWoE.ipynb  Tutorial_3_SQL_data_source.ipynb  Tutorial_3_sql_data_source.ipynb  Tutorial_4_NLP_Interpretation.ipynb  Tutorial_5_Uplift.ipynb  Tutorial_5_uplift.ipynb  Tutorial_6_Custom_pipeline.ipynb  Tutorial_6_custom_pipeline.ipynb  Tutorial_7_ICE_and_PDP_interpretation.ipynb
lightautoml/: __init__.py
lightautoml/addons/: __init__.py
lightautoml/automl/: __init__.py  automl_finf.py  base.py  blend.py
lightautoml/dataset/: __init__.py  base.py  np_pd_dataset.py  roles.py  seq_np_pd_dataset.py  utils.py
lightautoml/image/: __init__.py  image.py  utils.py
lightautoml/ml_algo/: __init__.py  base.py  boost_cb.py  boost_lgbm.py  dl_model.py  linear_sklearn.py  nn_models.py  random_forest.py  utils.py  whitebox.py
lightautoml/pipelines/: __init__.py  utils.py
lightautoml/reader/: __init__.py  base.py  guess_roles.py  seq.py  tabular_batch_generator.py  utils.py
scripts/: run_tutorials.py
tests/: conftest.py  demo.py  demo0.py  demo1.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py  demo_distillation.py  temp_test_data.csv
(+146 files in other folders)
