[tool.poetry]
name = "LightAutoML"
version = "0.2.6"
description = "Fast and customizable framework for automatic ML model creation (AutoML)"
authors = ["Alexander Ryzhkov <AMRyzhkov@sberbank.ru>",
           "Vakhrushev Anton <AGVakhrushev@sberbank.ru>",
           "Simakov Dmitrii <Simakov.D.E@sberbank.ru>"]
readme = "README.md"
homepage = "https://lightautoml.readthedocs.io/en/latest/"
repository = "https://github.com/sberbank-ai-lab/LightAutoML"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]


[tool.poetry.dependencies]
python = "^3.6.1"

poetry-core = "^1.0.0"
numpy = "*"
scipy = "*"
pandas = "*"
scikit-learn = "*"
lightgbm = "2.*"
optuna = "*"
torch = "*"
holidays = "*"
networkx = "*"
cmaes = "*"
log-calls = "*"
pyyaml = "*"
catboost = "*"

autowoe = "*"

json2html = "*"
jinja2 = "*"
seaborn = "*"

transformers = "*"
nltk = "*"
gensim = "*"
tqdm = "*"
efficientnet-pytorch = "*"
albumentations = "*"
opencv-python = "*"
joblib = "*"
pywavelets = "*"
scikit-image = "*"
torchvision = "*"

webencodings = "*"


[tool.poetry.dev-dependencies]
pytest = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
IPython = "*"
nbsphinx = "*"
nbsphinx-link = "*"
sphinx-autodoc-typehints = "*"
pandoc = "*"


importlib-metadata = {version = "^1.0", python = "<3.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"